# ReaK

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.bazel  BUILD_INSTRUCTIONS  CMakeLists.txt  MODULE.bazel  README  README.md  TODO_list.txt  TODO_unit_tests.txt  WORKSPACE  apply_clang_format.sh  clean_temporaries.sh  defs.bzl  notes_on_cpp11_features.txt  sloc_output.txt
ReaK/control/: CMakeLists.txt
ReaK/control/controllers/: BUILD.bazel  CMakeLists.txt  IHAQR_topology.h  MEAQR_topology.h  lqr_controllers.h  ss_controller_concept.h
ReaK/control/estimators/: BUILD.bazel  CMakeLists.txt  aggregate_kalman_filter.h  belief_state_concept.h  belief_state_predictor.h  covar_topology.h  covariance_concept.h  covariance_info_matrix.h  covariance_matrix.h  decomp_covariance_matrix.h  discrete_ss_predicted_traj.h  estimate_airship.cc  estimate_satellite3D.cc  gaussian_belief_space.h  gaussian_belief_state.h  hybrid_kalman_filter.h  invariant_aggregate_kalman_filter.h  invariant_kalman_bucy_filter.h  invariant_kalman_filter.h  invariant_symplectic_kalman_filter.h  kalman_bucy_filter.h  kalman_filter.h  maximum_likelihood_mapping.h  predict_satellite3D.cc  state_estimator_concept.h  state_observer_concept.h  symplectic_kalman_filter.h  tsos_aug_inv_kalman_filter.h  tsos_aug_kalman_filter.h  unscented_kalman_filter.h
ReaK/control/integrators/: BUILD.bazel  CMakeLists.txt  adams_BM3_integrator_sys.h  adams_BM5_integrator_sys.h  dormand_prince45_integrator_sys.h  euler_integrator_sys.h  fehlberg45_integrator_sys.h  hamming_iter_mod_integrator_sys.h  hamming_mod_integrator_sys.h  midpoint_integrator_sys.h  runge_kutta4_integrator_sys.h  runge_kutta5_integrator_sys.h
ReaK/control/qt/: CMakeLists.txt  target_pred_config_widget.cc  target_pred_config_widget.h
ReaK/control/systems/: BUILD.bazel  CMakeLists.txt  airship_IMU_mixins.h  airship_assembled_models.cc  airship_assembled_models.h  airship_basic_mixins.h  airship_drag_mixins.h  airship_sonar_mixins.h  airship_thruster_mixins.h  augmented_sss_concept.h  augmented_to_state_mapping.h  build_quadrotor_space.cc  discrete_linear_sss_concept.h  discrete_sss_concept.h  discretized_lti_sys.h  invariant_system_concept.h  kte_nl_system.h  linear_ss_system_concept.h  lti_discrete_sys.h  lti_ss_system.h  near_buoyant_airship_models.cc  near_buoyant_airship_models.h  num_int_dtnl_system.h  quadrotor_scene.cc  quadrotor_system.cc  quadrotor_system.h  satellite_basic_models.cc  satellite_basic_models.h  satellite_invar_models.cc  satellite_invar_models.h  satellite_modeling_options.cc  satellite_modeling_options.h  satellite_modeling_po.cc  satellite_modeling_po.h  sss_exceptions.h  state_space_sys_concept.h  state_space_system_tuple.h  state_to_output_mapping.h  state_vector_concept.h
ReaK/core/: CMakeLists.txt
ReaK/core/base/: BUILD.bazel  CMakeLists.txt  cnst_string.h  cnst_string_test.cc  defs.h  endian_conversions.h  endian_conversions_test.cc  global_rng.h  misc_math.h  named_object.h  py_base.cc  scope_guard.h  shared_object.h
ReaK/core/qt/: CMakeLists.txt  data_stream_opt_widget.cc  data_stream_opt_widget.h  obj_properties_qtmodel.cc  obj_properties_qtmodel.h  objtree_qtmodel.cc  objtree_qtmodel.h  rk_object_tree_widget.cc  rk_object_tree_widget.h  rk_object_tree_widget_test.cc  rk_prop_editor_widget.cc  rk_prop_editor_widget.h
ReaK/core/recorders/: BUILD.bazel  CMakeLists.txt  ascii_recorder.cc  ascii_recorder.h  bin_recorder.cc  bin_recorder.h  convert_datastream.cc  data_record.cc  data_record.h  data_record_options.cc  data_record_options.h  data_record_po.cc  data_record_po.h  network_recorder.cc  network_recorder.h  recorders_test.cc  vector_recorder.cc  vector_recorder.h
ReaK/core/rpc/: CMakeLists.txt  rpc_calls_test.cc  rpc_exceptions.cc  rpc_exceptions.h  rpc_function.h  rpc_server.cc  rpc_server.h  rpc_server_test.cc  rpc_version.cc  version.h
ReaK/core/rtti/: BUILD.bazel  CMakeLists.txt  rtti.h  rtti_test.cc  so_register_type.h  so_type.cc  so_type.h  so_type_repo.cc  so_type_repo.h  typed_containers.h  typed_object.h  typed_primitives.h
ReaK/core/serialization/: BUILD.bazel  CMakeLists.txt  archiver.h  archiver_factory.cc  archiver_factory.h  archiving_exceptions.h  bin_archiver.cc  bin_archiver.h  objtree_archiver.cc  objtree_archiver.h  protobuf_archiver.cc  protobuf_archiver.h  scheme_builder.cc  scheme_builder.h  serializable.h  serialization_test.cc  type_schemes.h  xml_archiver.cc  xml_archiver.h
ReaK/core/sorting/: BUILD.bazel  CMakeLists.txt  bubble_sort.h  comb_sort.h  heap_sort.h  insertion_sort.h  intro_sort.h  merge_sort.h  quick_sort.h  selection_sort.h  shell_sort.h  sorting_perf.cc  sorting_test.cc
ReaK/geometry/: CMakeLists.txt
ReaK/geometry/proximity/: BUILD.bazel  CMakeLists.txt  build_MD148_lab.cc  build_X8_obstacle_courses.cc  build_X8_quadrotor_geom.cc  keep_it_hot.md  prox_box_box.cc  prox_box_box.h  prox_ccylinder_box.cc  prox_ccylinder_box.h  prox_ccylinder_ccylinder.cc  prox_ccylinder_ccylinder.h  prox_ccylinder_cylinder.cc  prox_ccylinder_cylinder.h  prox_circle_circle.cc  prox_circle_circle.h  prox_circle_crect.cc  prox_circle_crect.h  prox_circle_rectangle.cc  prox_circle_rectangle.h  prox_crect_crect.cc  prox_crect_crect.h  prox_crect_rectangle.cc  prox_crect_rectangle.h  prox_cylinder_box.cc  prox_cylinder_box.h  prox_cylinder_cylinder.cc  prox_cylinder_cylinder.h  prox_fundamentals_2D.cc  prox_fundamentals_2D.h  (+36 more)
ReaK/math/: CMakeLists.txt
ReaK/mbd/: CMakeLists.txt
ReaK/planning/: CMakeLists.txt
ReaK/topologies/: CMakeLists.txt
libs/control/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/geometry/: CMakeLists.txt
libs/mbd/: CMakeLists.txt
libs/planning/: CMakeLists.txt
libs/py/: CMakeLists.txt
libs/topologies/: CMakeLists.txt
src/: CMakeLists.txt  Doxyfile.in  README  TODO_unit_tests.txt  sloc_output.txt
src/CMakeMods/: ConfigDoxygenTargets.cmake  FindBGLExtra.cmake  FindOpenCV.cmake  FindReaK.cmake  SetupReaKMacros.cmake
src/ReaK/: CMakeLists.txt  PyReaK.cmake  README  TypeIDList.txt  reak_py_bindings.cpp
(+2690 files in other folders)
