load("@bazel_cc_meta//cc_meta:cc_meta.bzl", "make_cc_meta_deviations", "refresh_cc_meta")

make_cc_meta_deviations(
    name = "reak_cc_meta_deviations",
    deviations = {
        # benchmark and benchmark_main export the benchmark headers and are always linked in.
        "@google_benchmark//:benchmark": {"exports": [
            "benchmark/benchmark.h",
        ]},
        "@google_benchmark//:benchmark_main": {
            "alwaysused": True,
            "forward_exports": True,
        },
        # gtest and gtest_main export the gtest headers and are always linked in.
        "@googletest//:gtest": {"exports": [
            "gtest/gtest.h",
            "gmock/gmock.h",
        ]},
        "@googletest//:gtest_main": {
            "alwaysused": True,
            "forward_exports": True,
        },
    },
    visibility = ["//visibility:public"],
)

refresh_cc_meta(
    name = "cc_meta_refresh_all",
    cc_meta_aspect = "//:defs.bzl%reak_cc_meta_aspect",
    visibility = ["//visibility:public"],
)
