#
# Copyright 2024 Sven Mikael Persson
#

module(
    name = "com_mikaelspersson_reak",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "abseil-cpp", version = "20230802.0", repo_name = "com_google_absl")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_python", version = "0.31.0")

bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.8.3", repo_name = "com_google_benchmark")

bazel_dep(name = "eigen", version = "3.4.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "af167878427c469db96444b65f026d064ec62a4f",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

# Boost libraries (header-only)
http_archive(
    name = "boost",
    build_file = "@//third_party:boost.BUILD",
    integrity = "sha256-JY7MZOXIC0PmX48kZ1HPtnYKzm6xgdu7eHd2WJFvV7Y=",
    strip_prefix = "boost-boost-1.84.0",
    url = "https://github.com/boostorg/boost/archive/refs/tags/boost-1.84.0.tar.gz",
)

# Boost Graph Library extras
git_repository(
    name = "boost_graph_extras",
    build_file = "@//third_party:boost_graph_extras.BUILD",
    commit = "bdc86edbf2215474d8fa759054c9b592316f4ca3",
    remote = "https://github.com/mikael-s-persson/boost_graph_ext_mp.git",
)



