#
# Copyright 2024 Sven Mikael Persson
#

module(
    name = "reak",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "toolchains_llvm", version = "1.6.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "17.0.6",
)

use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "buildozer", version = "8.2.1")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.8.4")

bazel_dep(name = "eigen", version = "3.4.0")

# Aspects to extract C++ metadata and fix dependency issues.
# bazel run //:cc_meta_refresh_all
# bazel run @bazel_cc_meta//cc_meta:fix_deps
http_archive(
    name = "bazel_cc_meta",
    integrity = "sha256-LznhQ9l2kwHgCkVwYsUJAjlyAM5WlvFrUflTR4atxbw=",
    strip_prefix = "bazel_cc_meta-0.1.0",
    urls = ["https://github.com/mikael-s-persson/bazel_cc_meta/archive/refs/tags/v0.1.0.tar.gz"],
)

# Born Again Graph Library (BGL port)
git_repository(
    name = "bagl",
    commit = "e95426473a3871b90bfe0d548e79929312fa82be",
    remote = "https://github.com/mikael-s-persson/bagl.git",
)
